# MyVideoPlayer

./: .clang-format  .cmake-format.json  CMakeLists.txt  README.md  Summary.md  TODO.md
src/my_video_player/: CMakeLists.txt  controller.cc  controller.h  main.cc  main.qml  widget.cc  widget.h
src/my_video_player/controller/: controller.cc  controller.h
src/my_video_player/log/: my_spdlog.h
src/my_video_player/player/: media_state.hpp  player.cc  player.h
src/my_video_player/player/engine/: media_state.hpp
src/my_video_player/player/engine/buffer/: video_packet_queue.h
src/my_video_player/player/engine/common/: engine_types.h  error_util.h  ffmpeg_raii.h
src/my_video_player/player/engine/convert/: video_converter.cc  video_converter.h
src/my_video_player/player/engine/decode/: video_decoder.cc  video_decoder.h
src/my_video_player/player/engine/demux/: demuxer.cc  demuxer.h
src/my_video_player/player/engine/thread/: demux_thread.cc  demux_thread.h  video_decode_thread.cc  video_decode_thread.h
src/my_video_player/player/engine/utils/: thread_safe_queue.hpp
src/my_video_player/player/output/qt/: qml_image_provider.cc  qml_image_provider.h  video_renderer_qimage.cc  video_renderer_qimage.h
src/my_video_player/ui/: main.qml
